# parse_OKRP_toexcel

./: README.md  parse_site.py  pyproject.toml  testOKRB.xlsx
